k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: abhishekk4/chatapp-frontend:latest
        ports:
        - containerPort: 80
        env:                  # will get your environment variable key and value , ports in Dockerfile
        - name: NODE_ENV
          value: production
